--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "JS"
   ],
   "peerDependencies": {
-    "vue": "^2.5.0"
+    "vue": "^3.1.0",
+    "@vue/compat": "^3.1.0"
   },
   "browserslist": [
     "> 1%",
@@ -76,6 +77,7 @@
     "copy-webpack-plugin": "^5.0.4",
     "core-js": "^3.2.1",
     "css-loader": "^3.2.0",
+    "style-loader": "^2.0.0",
     "es6-promise": "^4.2.4",
     "file-loader": "^4.2.0",
     "fs-extra": "^8.1.0",
@@ -89,10 +91,11 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-regenerator": "^0.6.0",
     "rollup-plugin-uglify": "^6.0.3",
-    "rollup-plugin-vue2": "^0.8.0",
-    "vue": "^2.5.16",
-    "vue-loader": "^15.7.1",
-    "vue-template-compiler": "^2.6.10",
+    "rollup-plugin-vue": "^6.0.0",
+    "vue": "^3.1.0",
+    "@vue/compat": "^3.1.0",
+    "vue-loader": "^16.3.3",
+    "@vue/compiler-sfc": "^3.1.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1",
